2007.03.15: David Nichols
	* fixes to on_block_exit and StatementBlock::execImpl()

2007.03.14: David Nichols
	* implemented the "on_block_exit" statement - this statement is meant to
	  provide a clean way to do exception-safe cleanup within Qore code.
	  Any single statment (or block) after the new "on_block_exit" keyword
	  will be executed when the current block exits (as long as the 
	  statement itself is reached when executing - "on_block_exit" 
	  statements that are never reached when executing will have no effect).
	  Therefore the position of the "on_block_exit" statement is important,
	  and the immediate effect of this statement is to queue it's code for
	  execution when the block is exited.  Even if an exception is raised or
	  a return statement is executed, any on_block_exit code that is queued 
	  will be executed.  Therefore it's ideal for putting cleanup code right
	  next to the code that requires the cleanup, and by using this 
	  statement, the programmer ensures that the cleanup will be performed
	  regardless of the exit status of the block (exception, return, etc)
	* finally tagged functions and classes in documentation with parse
	  restriction information
	* made it legal to use pairs of curly braces ({}) anywhere within a 
	  block to impose scoping rules
	* doc updates

2007.03.13: David Nichols
	* cleaned up/updated Qore statement implementation to a class tree with
	  a virtual API

2007.03.12: David Nichols
	* updated Counter class to throw exceptions on thread errors (deleted
	  while waiting threads, etc)
	* added Condition::wait_count() method
	* added Counter::getWaiting() method
	* Mutex::destructor() throws an exception if destroyed while condition
	  variables waiting on it
	* updated Queue class to throw exceptions on thread errors
	* added Queue::getWaiting() method
	* udpated documentation with many threading changes, added initial 
	  AutoGate, AutoLock, AutoReadLock, and AutoWriteLock class 
	  documentation
